@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.160 (gritter) 10/29/06
+.\" Sccsid @(#)doc.tr	1.162 (gritter) 10/31/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -98,7 +98,7 @@
 .fallback BI BIE
 .flig BI 31
 ..
-.ds Sccsdate 10/29/06
+.ds Sccsdate 10/31/06
 .ds Str \*[Sccsdate]
 .substring Str 0 0
 .if '\*[Str]'%' \{\
@@ -1358,10 +1358,12 @@ vertical distance \fIN\fR \fIin either direction\fR.\T
 Line Length and Indenting
 .bt
 \T'll'\fB&ll\fI|\(+-N\fR	6.5\|i	previous	E,\fBm\fR	Line length.\T
-.b1 0
+.b1
 \T'in'\fB&in\fI|\(+-N\fR	\fIN\(eq\fR\^0	previous	B,E,\fBm\fR	Indent.\T
 .b1 0
 \T'ti'\fB&ti\fI|\(+-N\fR	\(en	ignored	B,E,\fBm\fR	Temporary indent.\T
+.b1 0
+\T'pshape'\fB&pshape\fI|I1|L1|I2|L2|\fR...	off	E,\fBm\fR	Define the shape of the current paragraph in \fBad p\fR mode.\T
 .mht s_mac
 Macros, Strings, Diversion, and Position Traps
 .bt
@@ -1840,6 +1842,7 @@ refer to the detailed description on how to include it.
 \T'po'po	3\T
 \T'ps'ps	2\T
 \T'psbb'psbb	23\T
+\T'pshape'pshape	6\T
 \T'pso'pso	19\T
 \T'rchar'rchar	10\T
 \T'rd'rd	18\T
@@ -3722,6 +3725,86 @@ The \fInext\fR output text line will be indented a distance \fI\(+-N\fR
 with respect to the current indent.
 The resulting total indent may not be negative.
 The current indent is not changed.
+.bta pshape
+.di keep
+.hylang en_US
+.minss 9
+.letadj 95 98 18 105 102
+\fB&pshape\fI|I1|L1|I2|L2|\fR...	off	E,\fBm\fR	Set a special shape for the current paragraph in \fBad\ p\fR mode.
+\#.ds l 4m 6m 8m 10m 12m 14m 16m 18m 20m 22m 24m \
+\#22m 20m 18m 16m 14m 12m 10m 8m 6m 4m
+\#.ds s
+\#.while 1 \{\
+\#.	ds c \*l
+\#.	index i c " 
+\#.	if \ni>=0 \{\
+\#.		substring c 0 \ni-1
+\#.		substring l \ni+1
+\#.	\}
+\#.	nr t (\n(.l-\n(.i)-\*c/2
+\#.	nr in \n(.iu+\ntu
+\#.	nr ll \n(.lu-\ntu
+\#.	as s " \n(inu \n(llu
+\#.	if \ni<0 .break
+\#.\}
+\#.pshape \*s
+.nr l (\n(.lu-\n(.iu-7.4m)/3
+.nr t \nlu+3.7m
+.pshape \
+\n(.iu \n(.iu+\nlu-1m \
+\n(.iu \n(.iu+\nlu-.75m \
+\n(.iu \n(.iu+\nlu-.5m \
+\n(.iu \n(.iu+\nlu-.25m \
+\n(.iu \n(.iu+\nlu \
+\n(.iu+\ntu-.5m+1m \n(.iu+\ntu+\nlu-1m+.5m \
+\n(.iu+\ntu-.5m+.75m \n(.iu+\ntu+\nlu-.75+.5m \
+\n(.iu+\ntu-.5m+.5m \n(.iu+\ntu+\nlu-.5+.5m \
+\n(.iu+\ntu-.5m+.25m \n(.iu+\ntu+\nlu-.25+.5m \
+\n(.iu+\ntu-.5m \n(.iu+\ntu+\nlu+.5m \
+\n(.lu-\nlu+1m \n(.lu \
+\n(.lu-\nlu+.75m \n(.lu \
+\n(.lu-\nlu+.5m \n(.lu \
+\n(.lu-\nlu+.25m \n(.lu \
+\n(.lu-\nlu \n(.lu \
+\n(.iu \n(.lu
+.mk T
+.nr B \nTu+5v
+.dt \nBu T2
+.de T2
+.ch T2
+.sp |\nTu
+.dt \nBu T3
+..
+.de T3
+.ch T3
+.sp |\nTu
+..
+At the next \fIbreak\fR when the paragraph gets formatted,
+its first line is indented by \fII1\fR and has length \fIL1\fR,
+its second line is indented by \fII2\fR and has length \fIL2\fR,
+and so forth.
+The last of the indent and line length pairs stays effective
+if the paragraph has more lines
+than pairs are given.
+In the absence of a terminating line length measure,
+the standard line length as set by \T'll'\fBll\fR\T is used.
+Once the current paragraph has been printed,
+the shape specification is forgotten,
+and the standard indent and line length values are in effect again
+unless another \fBpshape\fR request occurs.
+Combine this mechanism with \T'c_trap'page or diversion traps\T
+to move lines in vertical direction
+as shown here.\p
+.br
+.di
+.ne \n(dnu
+.in 0
+.nf
+.keep
+.fi
+.hylang
+.minss
+.letadj
 .mha s_mac
 Macros, Strings, Diversion, and Position Traps
 .sc
